--- a/templates/package.json
+++ b/templates/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "chai": "^4.1.0",
-    "mocha": "^3.4.2"
+    "colors": "^1.1.2",
+    "mocha": "^3.4.2",
+    "shelljs": "^0.7.8"
   }
 }
