--- a/templates/package.json
+++ b/templates/package.json
@@ -6,14 +6,14 @@
     "test": "mocha"
   },
   "dependencies": {
-    "google-graphql-functions": "^0.1.0-alpha.1",
     "graphql": "^0.9.3",
     "graphql-s2s": "^0.2.1",
+    "graphql-serverless": "0.2.0-alpha.2",
     "graphql-tools": "^0.11.0",
     "lodash": "^4.17.4",
     "http-errors": "^1.6.1",
     "schemaglue": "^1.3.1",
-    "webfunc": "^0.4.0-alpha.0"
+    "webfunc": "0.6.0-alpha.6"
   },
   "devDependencies": {
     "chai": "^4.1.0",
