--- a/templates/package.json
+++ b/templates/package.json
@@ -3,7 +3,9 @@
   "version": "{{projectVersion}}",
   "scripts": {
     "postinstall": "npm dedupe",
-    "test": "mocha"
+    "test": "mocha",
+    "deploy": "gimp deploy",
+    "logs": "gimp logs"
   },
   "dependencies": {
     "graphql": "^0.9.3",
@@ -18,6 +20,7 @@
   "devDependencies": {
     "chai": "^4.1.0",
     "colors": "^1.1.2",
+    "gimpy": "0.1.0-alpha.13",
     "mocha": "^3.4.2",
     "shelljs": "^0.7.8"
   }
