feat: Add support for npm start

--- a/templates/package.json
+++ b/templates/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "postinstall": "npm dedupe",
     "test": "mocha",
+    "start": "gimp deploy",
     "deploy": "gimp deploy",
     "logs": "gimp logs"
   },
