--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "questions.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint question.js templates/"
+    "eslint": "eslint question.js templates/ --fix"
   },
   "repository": {
     "type": "git",
