--- a/templates/package.json
+++ b/templates/package.json
@@ -2,27 +2,26 @@
   "name": "{{projectName}}",
   "version": "{{projectVersion}}",
   "scripts": {
+    "dev": "nodemon index.js",
     "postinstall": "npm dedupe",
+    "start": "NODE_ENV=production now index.js",
     "test": "mocha",
-    "start": "gimp deploy",
-    "deploy": "gimp deploy",
-    "logs": "gimp logs"
   },
   "dependencies": {
     "graphql": "^0.9.3",
-    "graphql-s2s": "^0.2.1",
-    "graphql-serverless": "0.2.0-alpha.2",
+    "graphql-s2s": "^0.3.2",
+    "graphql-serverless": "0.2.0-alpha.6",
     "graphql-tools": "^0.11.0",
     "lodash": "^4.17.4",
     "http-errors": "^1.6.1",
-    "schemaglue": "^1.3.1",
-    "webfunc": "0.6.0-alpha.6"
+    "schemaglue": "^1.5.1",
+    "webfunc": "0.6.0-alpha.8"
   },
   "devDependencies": {
     "chai": "^4.1.0",
     "colors": "^1.1.2",
-    "gimpy": "0.1.0-alpha.13",
     "mocha": "^3.4.2",
+    "nodemon": "^1.12.5",
     "shelljs": "^0.7.8"
   }
 }
