--- a/templates/package.json
+++ b/templates/package.json
@@ -2,8 +2,8 @@
   "name": "{{projectName}}",
   "version": "{{projectVersion}}",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "NODE_ENV=production now index.js",
+    "dev": "node-dev index.js",
+    "start": "NODE_ENV=production node index.js",
     "test": "mocha"
   },
   "dependencies": {
@@ -14,13 +14,13 @@
     "lodash": "^4.17.4",
     "http-errors": "^1.6.1",
     "schemaglue": "^1.5.1",
-    "webfunc": "0.6.0-alpha.10"
+    "webfunc": "0.6.0-alpha.11"
   },
   "devDependencies": {
     "chai": "^4.1.0",
     "colors": "^1.1.2",
     "mocha": "^3.4.2",
-    "nodemon": "^1.12.5",
+    "node-dev": "^3.1.3",
     "shelljs": "^0.7.8"
   }
 }
